tests/snapshots/errors__errors_coffee@provides_on_empty_impl.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: #[*_provides] is supposed to be placed on an impl block containing one single function - found 0 functions instead
  --> examples/provides_on_empty_impl.rs:87:5
   |
87 |     impl CoffeeLogger {}
   |     ^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `logger::SingletonFactoryCoffeeLogger`
  --> examples/provides_on_empty_impl.rs:15:5
   |
15 | use logger::CoffeeLogger;
   |     ^^^^^^^^^^^^^^^^^^^^ no `SingletonFactoryCoffeeLogger` in `logger`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `coffee` (example "provides_on_empty_impl") due to 2 previous errors
